注释掉自动申请HTTPS证书的功能

--- a/seafile/docker-compose.yml
+++ b/seafile/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.1'
 
 volumes:
   seafile:
@@ -12,7 +12,7 @@ services:
       SEAFILE_SERVER_HOSTNAME: "seafile.alexc.cn"
       SEAFILE_ADMIN_EMAIL: "alexcdever@gmail.com"
       SEAFILE_ADMIN_PASSWORD: "zxc121233323223."
-      SEAFILE_SERVER_LETSENCRYPT: "true"
+      # SEAFILE_SERVER_LETSENCRYPT: "true"
     ports:
       - '8080:80'
       - '8443:443'
