--- a/mongodb/docker-compose.yml
+++ b/mongodb/docker-compose.yml
@@ -1,19 +1,29 @@
 version: '3.1'
 
-services:
+volumes:
+  mongo_config:
+  mongo_data:
 
+
+services:
+  # mongoDB
   mongo:
     image: mongo
     restart: always
+    ports:
+      - 27017:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
-
+    volumes:
+      - "mongo_config:/etc/mongo"
+      - "mongo_data:/data/db"
+  # MongoDB的可视化页面
   mongo-express:
     image: mongo-express
     restart: always
     ports:
-      - 8081:8081
+      - 8088:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: root
