--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -3,13 +3,14 @@ volumes:
   data:
   conf:
 services:
-  mysql:
+  mysql57:
     image: mysql:5.7
-    container_name: mysql
+    container_name: mysql57
     ports:
       - 6606:3306
     volumes:
       - data:/var/lib/mysql
       - conf:/etc/mysql/mysql.conf.d
     environment:
+      #管理员root的密码
       MYSQL_ROOT_PASSWORD: "root"
