重命名CI&CD文件夹为gitlab，我改变主意了，后面还是把Jenkins单独分出来吧

--- a/gitlab/docker-compose.yml
+++ b/gitlab/docker-compose.yml
@@ -10,9 +10,9 @@ volumes:
   gitlab_log:
   gitlab_data:
 
-services:
-# gitlab
+services: 
   gitlab:
+    #中文版gitlab
     image: 'beginor/gitlab-ce:11.1.4-ce.0'
     restart: always
     hostname: 'gitlab.alexc.cn'
