--- a/nexus/docker-compose.yml
+++ b/nexus/docker-compose.yml
@@ -1,8 +1,12 @@
 version: '2'
 
 networks:
-   nexus:
-     driver: bridge
+  nexus:
+    driver: bridge
+  install:
+    driver: bridge
+  
+   
 
 volumes:
   nexus:
@@ -18,4 +22,5 @@ services:
       - '8081:8081'
     volumes:
       - 'nexus:/nexus-data'
+      - 'install:/opt/sonatype/nexus'
 
