--- a/nexus/docker-compose.yml
+++ b/nexus/docker-compose.yml
@@ -5,9 +5,6 @@ networks:
     driver: bridge
   install:
     driver: bridge
-  
-   
-
 volumes:
   nexus:
 # 初始账号的账号密码分别是admin和admin123
@@ -15,7 +12,7 @@ services:
   nexus:
     image: 'sonatype/docker-nexus3'
     restart: always
-    hostname: 'nexus.alexc.cn'
+    container_name: nexus
     environment: 
       JAVA_MAX_MEM: 768m
     ports:
