- added the .gitignore to ignore some files or folders - updated README.md - updated mssql's docker-compose.yml

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
         "MONGODB",
+        "NOSQL",
         "gitlab",
         "grafana",
-        "seafile"
+        "mssql",
+        "seafile",
+        "sonarqube"
     ]
 }
