- updated nexus's docker-compose.yml

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,5 @@
 {
     "cSpell.words": [
-        "MONGODB",
-        "NOSQL",
-        "beginor",
-        "gitlab",
-        "grafana",
-        "mssql",
-        "seafile",
-        "sonarqube"
+        "sonatype"
     ]
 }
