--- a/nexus/docker-compose.yml
+++ b/nexus/docker-compose.yml
@@ -1,16 +1,11 @@
 version: '2'
 
-networks:
-  nexus:
-    driver: bridge
-  install:
-    driver: bridge
 volumes:
   nexus:
 # 初始账号的账号密码分别是admin和admin123
 services:
   nexus:
-    image: 'sonatype/docker-nexus3'
+    image: 'sonatype/nexus3:latest'
     restart: always
     container_name: nexus
     environment: 
@@ -19,5 +14,3 @@ services:
       - '8081:8081'
     volumes:
       - 'nexus:/nexus-data'
-      - 'install:/opt/sonatype/nexus'
-
