--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -1,4 +1,7 @@
-version: '3'
+version: '3.1'
+
+networks:
+  mysql:
 volumes:
   data:
   conf:
@@ -6,8 +9,10 @@ services:
   mysql-5.7:
     image: mysql:5.7
     container_name: mysql-5.7
+    networks: 
+      - "mysql"
     ports:
-      - 6606:3306
+      - 3306:3306
     volumes:
       - data:/var/lib/mysql
       - conf:/etc/mysql/mysql.conf.d
