--- a/sonarqube/docker-compose.yml
+++ b/sonarqube/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - 9000:9000
       - 9092:9092
     environment:
-      # 数据库连接信息
+      # database info
       SONARQUBE_JDBC_USERNAME: sonar
       SONARQUBE_JDBC_PASSWORD: sonar
       SONARQUBE_JDBC_URL: jdbc:postgresql://localhost/sonar
