--- a/sonarqube/docker-compose.yml
+++ b/sonarqube/docker-compose.yml
@@ -1,13 +1,31 @@
-version: '3'
+version: '2'
+
 services:
-  sonarqube:
-    image: sonarqube:alpine
-    container_name: sonarqube
-    ports:
-      - 9000:9000
-      - 9092:9092
-    environment:
-      # database info
-      SONARQUBE_JDBC_USERNAME: sonar
-      SONARQUBE_JDBC_PASSWORD: sonar
-      SONARQUBE_JDBC_URL: jdbc:postgresql://localhost/sonar
+
+### SonarQube Container ###########################
+# username/password：admin/admin
+    sonarqube:
+        build: ./sonarqube
+        container_name: sonar
+        ports:
+            - "9000:9000"
+        links:
+            - postgres
+        environment:
+            - SONARQUBE_JDBC_URL:jdbc:postgresql://db:5432/sonar
+
+            
+### PostgreSQL Container #######################################
+
+    postgres:
+      build: ./postgres
+      container_name: PostgreSQL
+      volumes:
+        - ~/log/postgres:/var/lib/postgresql/data
+      ports:
+        - "5432:5432"
+      environment:
+        - POSTGRES_USER=sonar
+        - POSTGRES_PASSWORD=sonar
+
+        
