--- a/sonarqube/docker-compose.yml
+++ b/sonarqube/docker-compose.yml
@@ -1,31 +1,22 @@
 version: '2'
-
 services:
+  postgres:
+    image: postgres
+    container_name: postgres
+    volumes:
+      - ~/log/postgres:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: sonar
+      POSTGRES_PASSWORD: sonar
+    expose:
+      - "5432"
 
-### SonarQube Container ###########################
-# username/password：admin/admin
-    sonarqube:
-        build: ./sonarqube
-        container_name: sonar
-        ports:
-            - "9000:9000"
-        links:
-            - postgres
-        environment:
-            - SONARQUBE_JDBC_URL:jdbc:postgresql://db:5432/sonar
-
-            
-### PostgreSQL Container #######################################
-
-    postgres:
-      build: ./postgres
-      container_name: PostgreSQL
-      volumes:
-        - ~/log/postgres:/var/lib/postgresql/data
-      ports:
-        - "5432:5432"
-      environment:
-        - POSTGRES_USER=sonar
-        - POSTGRES_PASSWORD=sonar
-
-        
+  sonarqube:
+    image: sonarqube
+    container_name: sonarqube
+    environment:
+      SONARQUBE_JDBC_URL: jdbc:postgresql://postgres:5432/sonar
+    ports:
+      - "9000:9000"
+    links:
+      - postgres
