--- a/sonarqube/docker-compose.yml
+++ b/sonarqube/docker-compose.yml
@@ -1,10 +1,14 @@
 version: '2'
+volumes:
+  db-data:
+  sonar-data:
 services:
   postgres:
     image: postgres
     container_name: postgres
+    restart: always
     volumes:
-      - ~/log/postgres:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: sonar
       POSTGRES_PASSWORD: sonar
@@ -14,6 +18,9 @@ services:
   sonarqube:
     image: sonarqube
     container_name: sonarqube
+    restart: always
+    volumes:
+      - sonar-data:/opt/sonarqube/data
     environment:
       SONARQUBE_JDBC_URL: jdbc:postgresql://postgres:5432/sonar
     ports:
