--- a/aria2/docker-compose.yml
+++ b/aria2/docker-compose.yml
@@ -5,7 +5,7 @@
 # WARNING!!!
 # please don't use this directly, this still not ready to use, still need to test
 
-version: "3"
+version: "3.1"
 
 services:
   aria2:
@@ -13,11 +13,11 @@ services:
     restart: always
     container_name: aria2
     environment:
-      - ENABLE_AUTH: ${ENABLE_AUTH}
-      - RPC_SECRET: ${RPC_SECRET}
-      - DOMAIN: ${DOMAIN}cd
-      - ARIA2_USER: ${ARIA2_USER}
-      - ARIA2_PWD: ${ARIA2_PWD}
+      - 'ENABLE_AUTH: ${ENABLE_AUTH}'
+      - 'RPC_SECRET: ${RPC_SECRET}'
+      - 'DOMAIN: ${DOMAIN}cd'
+      - 'ARIA2_USER: ${ARIA2_USER}'
+      - 'ARIA2_PWD: ${ARIA2_PWD}'
     ports:
       - '8888:80'
       - '8443:443'
@@ -25,4 +25,4 @@ services:
     volumes:
       - '${DATA_PATH}:/data'
       - '${SSL_FOLDER_PATH}:/root/conf/key'
-      - 'CONF_FILE_PATH:/root/conf/aria2.conf'
+      - '${CONF_FILE_PATH}:/root/conf/aria2.conf'
