update: update the env and config of aria2

--- a/aria2/.env
+++ b/aria2/.env
@@ -5,4 +5,4 @@ ARIA2_USER=username
 ARIA2_PWD=password
 DATA_PATH=~/Downloads
 SSL_FOLDER_PATH=~/Documents/ssl
-CONF_FILE_PATH=~/Documents/conf/aria2.conf
+CONF_FILE_PATH=./aria2.conf
