--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -7,13 +7,13 @@
 daemon=true
 
 # 下载位置, 默认: 当前启动位置
-dir=/PATH/Downloads
+dir=/Downloads
 
 # 从会话文件中读取下载任务
-input-file=/PATH/.aria2/aria2.session
+input-file=~/.aria2/aria2.session
 
 # 在Aria2退出时保存`错误/未完成`的下载任务到会话文件
-save-session=/PATH/.aria2/aria2.session
+save-session=~/.aria2/aria2.session
 
 # 定时保存会话, 0为退出时才保存, 需1.16.1以上版本, 默认:0
 save-session-interval=30
