update: comment the useless iterm

--- a/aria2/.env
+++ b/aria2/.env
@@ -4,5 +4,5 @@ DOMAIN=https://aria2.demo.com
 ARIA2_USER=username
 ARIA2_PWD=password
 DATA_PATH=~/Downloads
-SSL_FOLDER_PATH=~/Documents/ssl
+# SSL_FOLDER_PATH=~/Documents/ssl
 CONF_FILE_PATH=./aria2.conf
