--- a/aria2/docker-compose.yml
+++ b/aria2/docker-compose.yml
@@ -24,5 +24,5 @@ services:
       - '6800:6800'
     volumes:
       - '${DATA_PATH}:/data'
-      - '${SSL_FOLDER_PATH}:/root/conf/key'
+      # - '${SSL_FOLDER_PATH}:/root/conf/key'
       - '${CONF_FILE_PATH}:/root/conf/aria2.conf'
