fix: use '=' instead of ':'

--- a/aria2/docker-compose.yml
+++ b/aria2/docker-compose.yml
@@ -13,11 +13,11 @@ services:
     restart: always
     container_name: aria2
     environment:
-      - 'ENABLE_AUTH : ${ENABLE_AUTH} '
-      - 'RPC_SECRET: ${RPC_SECRET}'
-      - 'DOMAIN: ${DOMAIN}'
-      - 'ARIA2_USER: ${ARIA2_USER}'
-      - 'ARIA2_PWD: ${ARIA2_PWD}'
+      - 'ENABLE_AUTH=${ENABLE_AUTH} '
+      - 'RPC_SECRET=${RPC_SECRET}'
+      - 'DOMAIN=${DOMAIN}'
+      - 'ARIA2_USER=${ARIA2_USER}'
+      - 'ARIA2_PWD=${ARIA2_PWD}'
     ports:
       - '8888:80'
       - '8443:443'
