add the networks for some script; add a new service: redis

--- a/teamcity/docker-compose.yml
+++ b/teamcity/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     teamcity:
         image: jetbrains/teamcity-server:latest
         container_name: teamcity
+        networks: 
+            - teamcity
         ports: 
             - 8111:8111
         volumes: 
