--- a/rancher/docker-compose.yml
+++ b/rancher/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3'
 
+networks: 
+    rancher:
+        name: rancher
 services:
     rancher:
         image: rancher/rancher:stable
@@ -7,6 +10,8 @@ services:
         ports: 
             - 80:80
             - 443:443
+        networks: 
+            - rancher
         volumes: 
             - "./rancher:/var/lib/rancher"
             - "./log:/var/log/auditlog"
