--- a/mysql-5.7/docker-compose.yml
+++ b/mysql-5.7/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '3.7'
 
 networks:
   mysql:
@@ -10,6 +10,7 @@ services:
   mysql-5.7:
     image: mysql:5.7
     container_name: mysql-5.7
+    restart: always
     networks: 
       - "mysql"
     ports:
