update the version of all scripts to '3.7'

--- a/aria2/docker-compose.yml
+++ b/aria2/docker-compose.yml
@@ -5,7 +5,7 @@
 # WARNING!!!
 # please don't use this directly, this still not ready to use, still need to test
 
-version: "3.1"
+version: '3.7'
 
 services:
   aria2:
