--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -14,8 +14,8 @@ services:
         restart: always
         networks: 
             - redis
-        # ports: 
-        #     - 8111:8111
+        ports: 
+            - 6379:6379
         volumes: 
             - "data:/data"
             - "./config:/usr/local/etc/redis"
